@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,15 +21,31 @@
  * questions.
  */
 
-//key: compiler.warn.preview.feature.use
-//key: compiler.misc.feature.flexible.constructors
-//options: -Xlint:preview -XDforcePreview -source ${jdk.version} --enable-preview
+import jdk.internal.vm.annotation.Strict;
 
-import java.util.function.Function;
+class StrictFieldsNew {
 
-class PreviewFeatureUse {
-    PreviewFeatureUse() {
-        System.out.println("early init!");
+    @Strict
+    int x;
+    @Strict
+    int y;
+
+    StrictFieldsNew(boolean a, boolean b) {
+        System.out.println("Calling new constructor with " + a + " " + b);
+        if (a) {
+            x = 4;
+            if (b) {
+                y = 4;
+            } else {
+                y = 5;
+            }
+        } else {
+            x = y = 7;
+        }
         super();
+    }
+
+    public void foo() {
+        System.out.println("Hello new fool " + x + " " + y );
     }
 }
